overflow fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,11 +27,16 @@
   font-family: var(--font-bruno-ace), system-ui, sans-serif;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 /* Optional: make it global */
 body {
   font-family: var(--font-inter), system-ui, sans-serif;
   background-color: #010d17;
   color: white;
+  overflow-x: hidden;
 }
 
 h1,
